app/assets/stylesheets/application.css
/* ... */
 .popin input[type=text], select {
 	width: 100%;
 	height: 42px;
 	font-size: 22px;
 	color: #000000; 
 	margin-bottom: 12px;
 }

 .popin .button-group {
 	margin-top: 10px;
 }


 .popin .edit-property-popin {

 }


.popin .property-drop-area {
 	font-family: Arial, sans-serif;
 	font-size: 20px;
 	color: #FFF;
 	margin: 10px 0px;
 	padding: 10px 50px;
	border: 4px solid transparent;

}

.popin .property-drop-area.go-droparea-active {
	border: 4px solid #FFF;
}

.popin .property-drop-area .icon{
 	background-image: url('/assets/popin/bg-search.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	height: 42px;
 	width: 42px;
 	margin: 0px auto;	
}


 /* Tree viewer styles */


 .tree-viewer {
 	background-color: #8b8b85;
 	min-height: 130px;
 	width: 100%;
 	border-bottom: 1px solid #51534f;
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
 }

 .tree-viewer .tree-viewer-tree {
 	min-height: 130px;
 }

 .tree-viewer .tree-viewer-tree .columns {
 	min-height: 130px;
 }

 .tree-viewer .tree-viewer-tree .columns ul {
 	background-color: #afb0a8;
 	min-height: 130px;
 	list-style: none;
 }
 .tree-viewer .tree-viewer-tree .columns li:hover {
 	background-color: #51534f;
 	color: #FFFFFF;
 	cursor: pointer;
 }


 /* workspaces styles */

 .workspace:first-child {
 	margin-left: 15px;
 }

 .workspace {
 	border-right: 1px solid #afb0a8;
 	min-height: 600px;
 	background-image: url('/assets/workspaces/bg-search.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 390px;
 	float: left;
 	position: relative;
 }

 .workspace.occupied {
 	background-image: none;	
 }



 /* Game Object Related Popinstyle */

 .popin .find-and-open .results-container {
 	height: 280px;
 }

 .open-in {
 	width: 760px;
 	margin-left: -380px;
 }

 .open-in .use-workspace {
 	list-style: none;
 	margin-top: 30px;
 }

 .open-in .use-workspace li {
 	display: inline-block;
 	width: 140px;
 	height: 170px;
 	font-size: 107px;
 	border-radius: 20px;
 	background-color: #FFF;
 	color: #000;
 	margin: 0px 20px 20px 0px;
 	cursor: pointer;
 }

 .open-in .use-workspace li:hover {
 	background-color: #CCC;
 }


 /* Console Styles */

 .console {
 	height: 42px;
 	width: 100%;
 	position: fixed;
 	bottom: 0px;
 	z-index: 99;
 	background-color: #e9e9e7;
 	padding: 9px 12px 0px 12;
 	-webkit-box-shadow: 0px -2px 4px 2px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px -2px 4px 2px rgba(0, 0, 0, 0.3);
 	z-index: 2000;
 }


 .console .open-me {
 	width: 178px;
 	background-color: #51534f;
 	height: 24px;
 	text-align: center;
 	color: #e8e9e8;
 	font-weight: lighter;
 	font-size: 12px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 	margin: 8px auto;
 	padding: 4px;
 }


 /* Game Object styles */

 .game-object {
 	padding: 10px 10px;
 	font-family: Arial;
 	height: 100%;
 	background-color: #FFFFFF;
 }

 .game-object .header {
 	height: 32px;
 }

 .game-object .header .path {
 	float: left;
 	font-size: 12px;
 	color: #afb0a8;
 	margin-top: 4px;
 }

 .game-object .header .tools {
 	float: right;
 }


 .workspace .header .tools .icon {
 	display: block;
 	border-radius: 50%;
 	height: 22px;
 	width: 22px;
 	background-color: #afb0a8;
 	color: #FFF;
 	text-align: center;
 	font-size: 24px;
 	line-height: 20px;
 	float: right;
 	margin-left: 5px;
 	padding: 0px 0px 0px 0px;
 	font-weight: 200;
 	cursor: pointer;
 }

 .workspace .header .tools .icon:hover {
 	background-color: #cbccc2;
 }

 .workspace .header .tools .icon:active {
 	background-color: #8e8f89;
 }


 .workspace .header .tools .icon.i {
 	font-size: 14px;
 	font-weight: 600;
 }
 .workspace .header .tools .icon.x {
 	font-size: 16px;
 	font-weight: 600;
 }

 .game-object .editable:hover {
 	background-color: #e9e9e7;
 	border-radius: 10px;
 	position: relative;
 	cursor: pointer;
 }
 .game-object .editable:hover:after {
 	content: '';
 	position: absolute;
 	top: 3px;
 	right: 5px;
 	width: 16px;
 	height: 16px;
 	background-image: url(/assets/jquery_ui/ui-icons_888888_256x240.png);
 	background-position: -64px -112px;
 }

 .game-object .title {
 	color: #51534f;
 	font-size: 32px;
 	margin: 0px;
 	padding: 0px;
 	font-weight: lighter;
 	margin: 0px 0px 16px 0px;
 	letter-spacing: -2px;
 }

 .game-object .content h3 {
 	font-size: 18px;
 	color: #51534f;
 	font-weight: normal;
 	margin: 0px 0px 10px 0px;
 }

 .game-object .tabs {
 	list-style: none;
 	width: 100%;
 	margin: 0px 0px 20px 0px;
 	padding: 0px;
 	border-bottom: 1px solid #b8b9b1;
 }

 .game-object .tabs > li {
 	font-size: 12px;
 	float: left;
 	border-bottom: none;
 	color: #FFFFFF;
 	background-color: #b8b9b1;
 	border-radius: 4px 4px 0px 0px;
 	padding: 2px 8px 0px 8px;	
 	margin: 0px 4px 0px 0px;
 	cursor: pointer;
 }

 .game-object .tabs > li:hover {
 	background-color: #626460;
 }

 .game-object .tabs > li.selected {
 	background-color: #626460;
 }

 .game-object .tab-content {
 	display: none;
 }

 .game-object .tab-content.selected {
 	display: block;
 }

 .game-object .content .property-table {
 	width: 100%;
 	font-family: Arial;
 	margin: 0px 0px 25px 0px;
 }

 .game-object .content .property-table th {
 	color: #51534f;
 	font-weight: normal
 }

 .game-object .content .property-table td,th {
 	text-align: center;
 }	
 .game-object .content .property-table td:first-child, th:first-child {
 	text-align: left;
 }


 .game-object .content .property-table .active-value {
 	font-weight: bold;
 }

 .game-object .content .property-table .default-value {
 	color: #51534f;
 	font-weight: normal;
 }

 .game-object .content .desc-img {
 	height: 125px;
 	width: 125px;
 	float: left;
 	padding: 5px 5px 5px 0px;
 }

 .game-object .content .goc-description {
 	font-size: 12px;
 }

 /* Dragging game objects style */

 .go-draghandle.ui-draggable-dragging {
 	font-size: 24px;
 	font-weight: 400;
 	border: 1px solid #afb0a8;
 	background-color: #FFF;
 	box-shadow: 2px 2px 4px  rgba(0,0,0,0.2);
 	padding: 8px;
 	border-radius: 4px;
 }
/* ... */

